# employment-encounter

./: .dockerignore  .gitattributes  .gitignore  MASTER_SPEC.md  README.md  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml
apps/api-rust/: .env 2.example  .env.example  01_service_architecture.md  02_api_implementation_matrix.md  Cargo 2.toml  Cargo.toml
apps/web/: .gitignore  package-lock.json  package.json  playwright.config.ts
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
backend/: Cargo.toml
backend/migrations/: 001_tenants.sql  002_users.sql  003_clients.sql  006_time_entries.sql  007_invoices.sql  014_refresh_tokens.sql
backend/src/: config.rs  error.rs  main.rs  ws.rs
backend/src/auth/: handler.rs  jwt.rs  password.rs
backend/src/clients/: handler.rs  model.rs
backend/src/compliance/: handler.rs  model.rs
backend/src/dashboard/: handler.rs
backend/src/documents/: handler.rs  model.rs
backend/src/expenses/: handler.rs  model.rs
backend/src/invoices/: handler.rs  model.rs
backend/src/messages/: handler.rs  model.rs
backend/src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs  security.rs
backend/src/notifications/: model.rs
backend/src/payments/: handler.rs
backend/src/reports/: handler.rs
backend/src/settings/: handler.rs  model.rs
backend/src/tasks/: handler.rs  model.rs
backend/src/time_entries/: handler.rs  model.rs
backend/src/workflows/: handler.rs  model.rs
data/: 01_schema_migration_plan.md
demo_gtm/: 01_demo_architecture.md
devops/: 01_environments_cicd.md
docs/: 01_developer_handbook.md
final/: 01_integrated_master_plan.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: 01-auth.spec.ts  02-dashboard.spec.ts  03-clients.spec.ts  04-documents.spec.ts  05-invoices.spec.ts  06-time-entries.spec.ts  07-expenses.spec.ts  08-tasks.spec.ts  09-workflows.spec.ts  10-messages.spec.ts  11-reports.spec.ts  12-settings.spec.ts  13-onboarding.spec.ts  14-navigation.spec.ts
frontend_docs/: 01_architecture.md  02_routes_layouts.md  03_design_system.md  04_state_data_contracts.md
integrations/: 01_integration_contracts.md
product/: 01_prd_scope_lock.md  02_user_stories_gherkin.md  03_acceptance_criteria.md  04_mvp_change_control.md
program/: 01_wbs.md  02_dependencies.md  03_critical_path.md  04_raci.md  05_milestones_acceptance.md  06_no_drift_guardrail.md
qa/: 01_test_strategy.md
security/: 01_threat_model_controls.md
workflow/: 01_temporal_topology.md
(+335 files in other folders)
